tutorial01/deployment-adv.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blue-nginx
spec:
  replicas: 2
  selector:
    matchLabels:
      app: blue-nginx
  template:
    metadata:
      labels:
        app: blue-nginx
    spec:
      containers:
        - name: nginx
          image: teddy1565/web-backend
          ports:
          - containerPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: purple-nginx
spec:
  replicas: 2
  selector:
    matchLabels:
      app: purple-nginx
  template:
    metadata:
      labels:
        app: purple-nginx
    spec:
      containers:
      - name: nginx
        image: teddy1565/payment-backend
        ports:
        - containerPort: 3000
