tutorial01/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-deployment
spec:
  replicas: 3
  template:
    metadata:
      labels:
        app: demoApp
    spec:
      containers:
        - name: kubernetes-demo-container
          image: teddy1565/docker-demo
          ports:
            - containerPort: 3000
  selector:
    matchLabels:
      app: demoApp
