tutorial01/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: kubernetes-demo-pod
  labels:
    app: demoApp
spec:
  containers:
  - name: kubernetes-demo-container
    image: teddy1565/docker-demo
    ports:
    - containerPort: 3000
