tutorial01/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service
spec:
  selector:
    app: demoApp
  type: NodePort
  ports:
  - protocol: TCP
    port: 3001
    targetPort: 3000
    nodePort: 30390
