tutorial01/ingress-adv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: kubernetes.demo.com
    http:
      paths:
      - pathType: Prefix
        path: /blue
        backend:
          service:
            name: blue-service
            port:
              number: 80
      - pathType: Prefix
        path: /purple
        backend:
          service:
            name: purple-service
            port:
              number: 80
